# Compiled-LLM-Wiki

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
compiler/: README.md
compiler/schemas/: claim.schema.json  conflict.schema.json  entity.schema.json
ir/: README.md  claims.json  entities.json  index.json
ir/candidates/: README.md
ir/extracts/: kong_2024_pinn_lc_parameter_estimation.md  sun_2024_dc_voltage_prediction_mvdc.md
raw/: README.md
raw/kong_2024_pinn_lc_parameter_estimation/: metadata.json
raw/sample_demo/: NOTES.md  metadata.json  source.md
raw/sun_2024_dc_voltage_prediction_mvdc/: NOTES.md  metadata.json
src/compiled_wiki/: __init__.py  cli.py  index_build.py  ir_validate.py  lint_repo.py  llm_claims.py  llm_provider.py  pdf_extract.py  qa.py  repo.py  source_bundle.py
wiki/: index.md
wiki/analyses/: README.md
wiki/concepts/: README.md
wiki/entities/: README.md  demowidget.md  kong_2024_pinn_lc_parameter_estimation.md  sun_2024_dc_voltage_prediction_mvdc.md
wiki/hypotheses/: README.md
